[gd_scene load_steps=7 format=3 uid="uid://bwbs7u1ym8kgo"]

[ext_resource type="Script" uid="uid://cywavbjdrnsi4" path="res://UI/pause_menu/pause_menu.gd" id="1_7uhxs"]
[ext_resource type="FontFile" uid="uid://c136a2vhcuyce" path="res://assets/fonts/Abaddon Bold.ttf" id="1_x7vir"]
[ext_resource type="Theme" uid="uid://c6t26lejujvfl" path="res://assets/amarillo_button_theme.tres" id="2_7uhxs"]
[ext_resource type="Theme" uid="uid://6e5qksub65vd" path="res://assets/azul_button_theme.tres" id="3_2tqc6"]
[ext_resource type="Theme" uid="uid://qajhb3xter4m" path="res://assets/rojo_button_theme.tres" id="3_k3pgt"]

[sub_resource type="LabelSettings" id="LabelSettings_sucmq"]
font = ExtResource("1_x7vir")
font_size = 24
outline_size = 1
outline_color = Color(0, 0, 0, 1)

[node name="Pause_menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7uhxs")

[node name="fondo" type="ColorRect" parent="."]
layout_mode = 0
offset_left = -46.0
offset_top = -17.0
offset_right = 1198.0
offset_bottom = 673.0
color = Color(0.123473, 0.123473, 0.123473, 0.709804)

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 432.0
offset_top = 162.0
offset_right = 732.0
offset_bottom = 464.0
color = Color(0.138034, 0.138034, 0.138034, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 445.0
offset_top = 185.0
offset_right = 721.0
offset_bottom = 449.0
theme_override_constants/separation = 40

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Menu de Pausa"
label_settings = SubResource("LabelSettings_sucmq")
horizontal_alignment = 1

[node name="volver" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_2tqc6")
text = "Volver al juego"

[node name="return" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_7uhxs")
text = "Volver al menu"

[node name="exit" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_k3pgt")
text = "Salir del juego"

[connection signal="pressed" from="VBoxContainer/volver" to="." method="_on_volver_pressed"]
[connection signal="pressed" from="VBoxContainer/return" to="." method="_on_return_pressed"]
[connection signal="pressed" from="VBoxContainer/exit" to="." method="_on_exit_pressed"]
